[gd_scene load_steps=13 format=3 uid="uid://btpulysfkoqly"]

[ext_resource type="Texture2D" uid="uid://bx5qri4e2cokk" path="res://Entities/Weapons/Mine.png" id="1_fdql2"]
[ext_resource type="Script" path="res://Entities/Weapons/Mine.gd" id="1_w4y0n"]
[ext_resource type="PackedScene" uid="uid://deb26datidugv" path="res://Shaders/VisualTestArea.tscn" id="2_d70k5"]
[ext_resource type="PackedScene" uid="uid://bydxskl7vyst7" path="res://Shaders/Particles/Explosion.tscn" id="4_rew5v"]
[ext_resource type="Texture2D" uid="uid://d1y5v4sd3axmk" path="res://Shaders/Lights/General.GradientTexture2D.tres" id="6_lbcyi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ebqi5"]
radius = 80.399

[sub_resource type="Gradient" id="Gradient_xhxey"]
offsets = PackedFloat32Array(0.133028, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l8us8"]
gradient = SubResource("Gradient_xhxey")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.1)
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_ohscn"]
resource_name = "Detonate"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionLight:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 0.5, 1, 1),
"update": 0,
"values": [0.01, 2.8, 0.01, 0.01]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplosionLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mud5y"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleLights/PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.999),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [5.0, 0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IdleLights/PointLight2D2:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4, 0.999),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 5.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_uvks4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionLight:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplosionLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IdleLights/PointLight2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IdleLights/PointLight2D2:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwqh7"]
_data = {
"Detonate": SubResource("Animation_ohscn"),
"Idle": SubResource("Animation_mud5y"),
"RESET": SubResource("Animation_uvks4")
}

[node name="Mine" type="Area2D"]
collision_layer = 1073741844
collision_mask = 1073741844
monitorable = false
script = ExtResource("1_w4y0n")

[node name="VisualTestArea" parent="." instance=ExtResource("2_d70k5")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fdql2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ebqi5")

[node name="ExplosionLight" type="PointLight2D" parent="."]
enabled = false
color = Color(0.956863, 0.619608, 0.113725, 1)
texture = SubResource("GradientTexture2D_l8us8")
texture_scale = 0.01

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwqh7")
}

[node name="OffsetTimer" type="Timer" parent="AnimationPlayer"]

[node name="Explosion" parent="." instance=ExtResource("4_rew5v")]

[node name="IdleLights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="IdleLights"]
modulate = Color(1, 1, 1, 0)
position = Vector2(2, 2)
color = Color(0.956863, 0.619608, 0.113725, 1)
energy = 2.0
texture = ExtResource("6_lbcyi")
texture_scale = 0.25

[node name="PointLight2D2" type="PointLight2D" parent="IdleLights"]
position = Vector2(-2, -2)
color = Color(0.956863, 0.619608, 0.113725, 1)
energy = 2.0
texture = ExtResource("6_lbcyi")
texture_scale = 0.25

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
